--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 		"source": "https://github.com/WapplerSystems/typo3-site-region"
 	},
 	"require": {
-		"typo3/cms-core": "^10.0"
+		"typo3/cms-core": "^10.0 || ^11.0"
 	},
 	"extra": {
 		"typo3/cms": {
